-Items in Quivers are now counted by Counters.
-Electronic Arts/Origin Servers have been added to the Welcome Screen.  Selecting this option will automatically configure razor's Encryption options and connect you to the EA/Origin login server.
-There is now a Toggle war/peace hot key

Changes/Fixes:
-The UOPS window will now correctly display (and update) the positions of party members under all circumstances.
-RPV Playback has become a good deal smoother (especially when theres a lot going on on screen).  Playback at Normal speed should now look proper.
-RPV Seeking is once again working.
-Un/Re-Equip hands when using potions will now correctly wait to re-equip your hands until all other pending potion requests have been completed.
-Screen shots should always be correctly centered now.
-Stun and Disarm hotkeys now have a slight 'spam' delay (0.5 sec) to prevent them from being accidentally toggled quickly by holding the key down for too long.
-If a macro which drags an item is stopped before the item is dropped the item will now be placed in your backpack instead of on the ground.
-Last Target can no longer be the ground or a piece of the map.  Only dynamic items and characters can be set to the last target now.
-Attempting to use the restock agent on something that is too far away will now give you an error (instead of just blindly doing it anyway).
-Screenshot list will now correctly update when a first screen shot is taken.
-The macro manager will now show an error when attempting to create a profile, macro category, or new macro with invalid characters in the name.
-Editing macro Comments will no longer crash Razor.
-Scavenger Agent will no longer attempt to pick up items which are too far away, and these items will be automatically removed from the cache in case you pass them again.  This should result in better scavenger performance over all.