@@ -37,7 +37,7 @@ namespace Assistant
 			AddProperty( "CounterWarnAmount", (int)5 );
 			AddProperty( "CounterWarn", true );
 			AddProperty( "ObjectDelay", (int)600 );
-			AddProperty( "AlwaysOnTop", true );
+			AddProperty( "AlwaysOnTop", false );
 			AddProperty( "SortCounters", true );
 			AddProperty( "QueueActions", true );
 			AddProperty( "QueueTargets", true );
@@ -127,8 +127,8 @@ namespace Assistant
 
 			AddProperty( "MapX", 200 );
 			AddProperty( "MapY", 200 );
-			AddProperty( "MapW", 250 );
-			AddProperty( "MapH", 250 );
+			AddProperty( "MapW", 200 );
+			AddProperty( "MapH", 200 );
 
 			AddProperty( "LogPacketsByDefault", false );
 
